linux/microk8s/dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS  # This is important, otherwise we get a 400 bad request
spec:
  ingressClassName: public  # the public ingress class
  rules:
    - host: "k8s.dashboard.local"  # The friendly name we are going to use and will use adguard custom filters to point it to our lb
      http:
        paths:
        - path: /
          pathType: Prefix # there are a few options here that we can  use
          backend:
            service:
              name: kubernetes-dashboard  # the name n to the service
              port:
                number: 443  #port dashboard is running
